[build-system]
requires = [
    "meson-python",
    "Cython",
    "numpy",
]
build-backend = "mesonpy"

[project]
name = "pyqint"
version = "1.2.0"
description = "Python package for evaluating integrals of Gaussian type orbitals"
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Ivo Filot", email = "ivo@ivofilot.nl" }
]
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "matplotlib"]

[project.urls]
Homepage = "https://github.com/ifilot/pyqint"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "python -m pytest"
skip = ["pp*", "*-win32", "*-manylinux_i686", "cp*-musllinux_*", "cp38-*"]